# project-graph-tool

./: .gitignore  AGENT_DESCRIBE_NODES.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  graph_model.md  pyproject.toml  pyrightconfig.json  run.ps1  run.sh  serve.py
config/: external_apis.yaml  node_rules.yaml
project_graph/: __init__.py  __main__.py  config.py  pipeline.py  utils.py
project_graph/builder/: __init__.py  infra_detector.py  node_classifier.py  scenario_tracer.py
project_graph/cli/: describe.py  export.py  inspect.py  main.py  trace.py
project_graph/export/: json_exporter.py
project_graph/models/: __init__.py  edge.py  graph.py  node.py
project_graph/parsing/: __init__.py  ast_store.py  extractors.py  tree_sitter_parser.py
project_graph/resolution/: __init__.py  call_graph.py  definition_resolver.py  incremental_call_graph.py  jedi_resolver.py  pyright_bridge.py
project_graph/storage/: networkx_store.py
project_graph/trace_roots/: __init__.py  merger.py  models.py  resolver.py  store.py
templates/data-repo/: .gitignore  README.md  run.ps1  run.sh  serve.ps1  serve.sh  workspace.yaml
templates/data-repo/config/: reference_scenarios.yaml  trace_done.yaml  trace_queue.yaml
tests/: test_models.py  test_resolution.py
tests/fixtures/resolution_project/: manage.py  workspace.yaml
tests/fixtures/resolution_project/app/: helpers.py  services.py  views.py
viewer/: app.js  index.html  styles.css
