[project]
name = "project-graph-tool"
version = "0.1.0"
description = "Project Execution Map — static analysis tool for Python projects"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "jedi>=0.19",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
project-graph = "project_graph.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project_graph"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
